--- a/demo5/deepspeed_config.json
+++ b/demo5/deepspeed_config.json
@@ -3,12 +3,15 @@
     "train_micro_batch_size_per_gpu": 1,  
     "zero_optimization": {
         "stage": 3,
+        "offload_optimizer": {
+            "device": "cpu"
+        },
         "overlap_comm": true,
         "contiguous_gradients": true,
         "sub_group_size": 1e9,
-        "reduce_bucket_size": "auto",
-        "stage3_prefetch_bucket_size": "auto",
-        "stage3_param_persistence_threshold": "auto",
+        "reduce_bucket_size": 1e7,
+        "stage3_prefetch_bucket_size": 1e7,
+        "stage3_param_persistence_threshold": 1e5,
         "stage3_max_live_parameters": 1e9,
         "stage3_max_reuse_distance": 1e9,
         "stage3_gather_16bit_weights_on_model_save": true
